--- a/Posicionamento/style.css
+++ b/Posicionamento/style.css
@@ -17,28 +17,46 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
+}
+
 p, h1, h2, h3 {
   margin: 0px;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
-.nav {
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
+}
+
+.menu {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.nav a {
+.menu a {
+  display: inline-block;
   background: #ffffff;
-  padding: 15px 30px;
+  padding: 1rem 2rem;
   border-radius: 5px;
   color: #000000;
   text-transform: uppercase;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #e21;
 }
 
 .conteudo {
@@ -55,10 +73,15 @@ p {
   display: grid;
   gap: 20px;
   align-content: center;
-  justify-content: end;
+  justify-items: end;
 }
 
-.detalhe {
+.intro h1 {
+  font-size: 2rem;
+}
+
+.intro::before{
+  content: "";
   width: 60px;
   height: 5px;
   background: #e21;
@@ -67,21 +90,30 @@ p {
   right: -30px;
 }
 
+/* .detalhe {
+} */
+
 .botao {
   background: #e21;
-  color: #ffffff;
-  padding: 15px 30px;
+  color: #fff;
+  padding: 1rem 2rem;
   border-radius: 5px;
   text-transform: uppercase;
+  border: 0px;
+}
+
+.botao:hover{
+  background: #900;
 }
 
 .subtitulo {
-  font-size: 64px;
+  font-size: 4rem;
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.2);
   text-align: right;
   padding: 40px;
   align-self: center;
+  background-image: url(./img2/onda.svg);
 }
 
 .vantagens {
@@ -94,6 +126,14 @@ p {
   grid-template-columns: auto 1fr;
   gap: 10px 20px;
   padding: 20px;
+}
+
+.vantagens-item:nth-child(odd) {
+  background: #f7f7f7;
+}
+
+.vantagens-item:hover {
+  border-left: 4px solid #e21;
 }
 
 .vantagens-item p {
