feat css responsive and adjusts

--- a/Posicionamento/style.css
+++ b/Posicionamento/style.css
@@ -90,6 +90,11 @@ p {
   right: -30px;
 }
 
+.intro-cover img {
+  object-fit: cover;
+  height: 100%;
+}
+
 /* .detalhe {
 } */
 
@@ -114,6 +119,7 @@ p {
   padding: 40px;
   align-self: center;
   background-image: url(./img2/onda.svg);
+  /* word-break: break-all; */
 }
 
 .vantagens {
@@ -146,4 +152,45 @@ p {
   text-align: center;
   padding: 40px;
   box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    gap: 30px;
+    margin-top: 20px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .intro {
+    text-align: left;
+    justify-items: start;
+  }
+  .intro::before {
+    display: none;
+  }
+  .subtitulo{
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .subtitulo{
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1rem;
+  }
 }
